--- a/assessment.html
+++ b/assessment.html
@@ -54,10 +54,10 @@
       background: #0f172a;
       color: white;
       min-height: 100vh;
-      padding: 24px;
+      padding: 60px 24px 24px 24px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
     }
     .container {
       max-width: 540px;
@@ -318,7 +318,7 @@
     }
     .start-screen {
       text-align: center;
-      padding: 40px 0;
+      padding: 20px 0;
     }
     .start-title {
       font-size: 2rem;
@@ -607,7 +607,7 @@
 
     @media (max-width: 480px) {
       body {
-        padding: 16px;
+        padding: 48px 16px 16px 16px;
       }
       .header {
         margin-bottom: 20px;
@@ -841,7 +841,7 @@
       <!-- Key Distinction -->
       <div class="distinction-card">
         <p class="card-label">Remember</p>
-        <p class="distinction-text"><strong>Acceptance</strong> is acknowledging what is. <strong>Agreement</strong> is endorsing it.</p>
+        <p class="distinction-text"><strong style="color: #fbbf24;">Acceptance</strong> is acknowledging what is. <strong style="color: #f8fafc;">Agreement</strong> is endorsing it.</p>
         <p style="color: #cbd5e1; margin-top: 12px;">You can fully accept where you are without agreeing to stay there. This is your starting point, not your destination.</p>
       </div>
 
