--- a/quick.html
+++ b/quick.html
@@ -49,10 +49,10 @@
       background: #0f172a;
       color: white;
       min-height: 100vh;
-      padding: 24px;
+      padding: 60px 24px 24px 24px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
     }
     .container {
       max-width: 540px;
@@ -365,7 +365,7 @@
     }
     .start-screen {
       text-align: center;
-      padding: 40px 0;
+      padding: 20px 0;
     }
     .start-title {
       font-size: 1.75rem;
@@ -472,7 +472,7 @@
 
     @media (max-width: 480px) {
       body {
-        padding: 16px;
+        padding: 48px 16px 16px 16px;
       }
       .header {
         margin-bottom: 16px;
@@ -649,7 +649,7 @@
       
       <!-- Key Distinction -->
       <div class="card" style="text-align: center;">
-        <p style="color: #e2e8f0; font-size: 0.9rem;"><strong style="color: #fbbf24;">Acceptance</strong> is acknowledging what is. <strong style="color: #fbbf24;">Agreement</strong> is endorsing it.</p>
+        <p style="color: #e2e8f0; font-size: 0.9rem;"><strong style="color: #fbbf24;">Acceptance</strong> is acknowledging what is. <strong style="color: #f8fafc;">Agreement</strong> is endorsing it.</p>
         <p style="color: #94a3b8; font-size: 0.85rem; margin-top: 8px;">You can accept your scores without agreeing to stay there.</p>
       </div>
       
