--- a/assessment.html
+++ b/assessment.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="7 Levels of Self Assessment">
   <meta property="og:description" content="A 5-minute assessment to discover where your real work is. 7 levels. 7 questions. One honest look at yourself.">
+  <meta property="og:image" content="https://level-up-game-mu.vercel.app/og-assessment.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/assessment.html">
   <meta property="og:site_name" content="Levels of Self">
   
@@ -17,6 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="7 Levels of Self Assessment">
   <meta name="twitter:description" content="A 5-minute assessment to discover where your real work is. 7 levels. 7 questions. One honest look at yourself.">
+  <meta name="twitter:image" content="https://level-up-game-mu.vercel.app/og-assessment.png">
   
   <style>
     * {
