--- a/quick.html
+++ b/quick.html
@@ -8,10 +8,17 @@
   
   <!-- Open Graph / Social Sharing -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="7 Levels of Self - Quick Assessment">
-  <meta property="og:description" content="1 minute. 3 questions. Find out where your real work is.">
+  <meta property="og:title" content="1-Minute Check-In - 7 Levels of Self">
+  <meta property="og:description" content="Quick clarity on where to focus your energy. No email required.">
+  <meta property="og:image" content="https://level-up-game-mu.vercel.app/og-quick.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/quick.html">
   <meta property="og:site_name" content="Levels of Self">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="1-Minute Check-In - 7 Levels of Self">
+  <meta name="twitter:description" content="Quick clarity on where to focus your energy. No email required.">
+  <meta name="twitter:image" content="https://level-up-game-mu.vercel.app/og-quick.png">
   
   <style>
     * {
