--- a/quick.html
+++ b/quick.html
@@ -8,17 +8,17 @@
   
   <!-- Open Graph / Social Sharing -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="1-Minute Check-In - 7 Levels of Self">
-  <meta property="og:description" content="Quick clarity on where to focus your energy. No email required.">
-  <meta property="og:image" content="https://level-up-game-mu.vercel.app/og-quick.png">
+  <meta property="og:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
+  <meta property="og:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
+  <meta property="og:image" content="https://100levelup.com/og-quick.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/quick.html">
   <meta property="og:site_name" content="Levels of Self">
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="1-Minute Check-In - 7 Levels of Self">
-  <meta name="twitter:description" content="Quick clarity on where to focus your energy. No email required.">
-  <meta name="twitter:image" content="https://level-up-game-mu.vercel.app/og-quick.png">
+  <meta name="twitter:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
+  <meta name="twitter:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
+  <meta name="twitter:image" content="https://100levelup.com/og-quick.png">
   
   <style>
     * {
