--- a/assessment.html
+++ b/assessment.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="7 Levels of Self Assessment - Discover Where Your Real Work Is">
   <meta property="og:description" content="A 5-minute assessment to discover where your real work is. 7 levels. 7 questions. One honest look at yourself.">
-  <meta property="og:image" content="https://100levelup.com/og-assessment.png">
+  <meta property="og:image" content="https://selfcheck.100levelup.com/og-assessment.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/assessment.html">
   <meta property="og:site_name" content="Levels of Self">
   
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="7 Levels of Self Assessment - Discover Where Your Real Work Is">
   <meta name="twitter:description" content="A 5-minute assessment to discover where your real work is. 7 levels. 7 questions. One honest look at yourself.">
-  <meta name="twitter:image" content="https://100levelup.com/og-assessment.png">
+  <meta name="twitter:image" content="https://selfcheck.100levelup.com/og-assessment.png">
   
   <style>
     * {
