--- a/quick.html
+++ b/quick.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
   <meta property="og:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
-  <meta property="og:image" content="https://100levelup.com/og-quick.png">
+  <meta property="og:image" content="https://selfcheck.100levelup.com/og-quick.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/quick.html">
   <meta property="og:site_name" content="Levels of Self">
   
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
   <meta name="twitter:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
-  <meta name="twitter:image" content="https://100levelup.com/og-quick.png">
+  <meta name="twitter:image" content="https://selfcheck.100levelup.com/og-quick.png">
   
   <style>
     * {
