--- a/assessment.html
+++ b/assessment.html
@@ -20,6 +20,11 @@
   <meta name="twitter:description" content="A 5-minute assessment to discover where your real work is. 7 levels. 7 questions. One honest look at yourself.">
   <meta name="twitter:image" content="https://selfcheck.100levelup.com/og-assessment.png">
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="512x512" href="https://100levelup.com/icon-512.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://100levelup.com/icon-192.png">
+  <link rel="apple-touch-icon" href="https://100levelup.com/apple-touch-icon.png">
+  
   <style>
     * {
       margin: 0;
