--- a/quick.html
+++ b/quick.html
@@ -20,6 +20,11 @@
   <meta name="twitter:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
   <meta name="twitter:image" content="https://selfcheck.100levelup.com/og-quick.png">
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="512x512" href="https://100levelup.com/icon-512.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://100levelup.com/icon-192.png">
+  <link rel="apple-touch-icon" href="https://100levelup.com/apple-touch-icon.png">
+  
   <style>
     * {
       margin: 0;
