--- a/quick.html
+++ b/quick.html
@@ -9,7 +9,7 @@
   <!-- Open Graph / Social Sharing -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
-  <meta property="og:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
+  <meta property="og:description" content="3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework from LevelsOfSelf.com">
   <meta property="og:image" content="https://selfcheck.100levelup.com/og-quick.png">
   <meta property="og:url" content="https://selfcheck.100levelup.com/quick.html">
   <meta property="og:site_name" content="Levels of Self">
@@ -17,7 +17,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="1-Minute Check-In - Find Where to Focus Your Energy Today">
-  <meta name="twitter:description" content="Quick clarity on where to focus your energy. 3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework.">
+  <meta name="twitter:description" content="3 questions. 1 minute. No email required. Based on the 7 Levels of Self framework from LevelsOfSelf.com">
   <meta name="twitter:image" content="https://selfcheck.100levelup.com/og-quick.png">
   
   <!-- Favicon -->
